--- a/artifacts/rbac.yaml
+++ b/artifacts/rbac.yaml
@@ -15,10 +15,29 @@ rules:
   resources:
   - customresourcedefinitions
   verbs:
-  - get
-  - list
+  - '*'
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
   - create
-  - delete
+  - get
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - roles
+  - rolebindings
+  verbs:
+  - create
+  - get
+- apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
+  verbs:
+  - create
+  - get
 - apiGroups:
   - ""
   resources:
