install composition dynamic controller after CRD creation

--- a/testdata/definition-sample.yaml
+++ b/testdata/definition-sample.yaml
@@ -1,6 +1,8 @@
 apiVersion: core.krateo.io/v1alpha1
 kind: Definition
 metadata:
+  annotations:
+     "krateo.io/connector-verbose": "true"
   name: sample
   namespace: krateo-system
 spec:
