--- a/testdata/definition-postgresql.yaml
+++ b/testdata/definition-postgresql.yaml
@@ -3,7 +3,7 @@ kind: Definition
 metadata:
   annotations:
      "krateo.io/connector-verbose": "true"
-  name: sample
+  name: postgresql
   namespace: krateo-system
 spec:
-  chartUrl: https://github.com/lucasepe/busybox-chart/releases/download/v0.2.0/dummy-chart-0.2.0.tgz
+  chartUrl: https://github.com/krateoplatformops/postgresql-demo-chart/releases/download/12.8.3/postgresql-12.8.3.tgz
