update definition samples

--- a/testdata/definition-dummychart.yaml
+++ b/testdata/definition-dummychart.yaml
@@ -6,4 +6,5 @@ metadata:
   name: dummychart
   namespace: krateo-system
 spec:
-  chartUrl: https://github.com/lucasepe/busybox-chart/releases/download/v0.2.0/dummy-chart-0.2.0.tgz
+  chart:
+    url: https://github.com/lucasepe/busybox-chart/releases/download/v0.2.0/dummy-chart-0.2.0.tgz
