replace 'composition' with 'definition' in crd categories

--- a/crds/core.krateo.io_definitions.yaml
+++ b/crds/core.krateo.io_definitions.yaml
@@ -10,7 +10,7 @@ spec:
   names:
     categories:
     - krateo
-    - composition
+    - definition
     - core
     kind: Definition
     listKind: DefinitionList
