--- a/testdata/definition-postgresql-tgz.yaml
+++ b/testdata/definition-postgresql-tgz.yaml
@@ -3,10 +3,8 @@ kind: Definition
 metadata:
   annotations:
      "krateo.io/connector-verbose": "true"
-  name: postgresql-oci
+  name: postgresql-tgz
   namespace: krateo-system
 spec:
   chart:
-    url: oci://registry-1.docker.io/bitnamicharts/postgresql
-    version: "12.8.3"
-
+    url: https://charts.bitnami.com/bitnami/postgresql-12.8.3.tgz
