--- a/crds/core.krateo.io_definitions.yaml
+++ b/crds/core.krateo.io_definitions.yaml
@@ -65,6 +65,7 @@ spec:
                     type: string
                 required:
                 - url
+                - version
                 type: object
               deletionPolicy:
                 default: Delete
