refactor: use crdgen library

--- a/testdata/definition-kargo-tgz.yaml
+++ b/testdata/definition-kargo-tgz.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
      "krateo.io/connector-verbose": "true"
   name: kargo-tgz
-  namespace: krateo-system
+  namespace: demo-system
 spec:
   chart:
     url: https://github.com/krateoplatformops/kargo-chart/releases/download/0.1.6/kargo-0.1.0.tgz
