--- a/testdata/definition-postgresql-repo.yaml
+++ b/testdata/definition-postgresql-repo.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
      "krateo.io/connector-verbose": "true"
   name: postgresql-repo
-  namespace: krateo-system
+  namespace: demo-system
 spec:
   chart:
     url: https://charts.bitnami.com/bitnami
