--- a/crds/core.krateo.io_compositiondefinitions.yaml
+++ b/crds/core.krateo.io_compositiondefinitions.yaml
@@ -3,8 +3,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.1
-  name: definitions.core.krateo.io
+    controller-gen.kubebuilder.io/version: v0.14.0
+  name: compositiondefinitions.core.krateo.io
 spec:
   group: core.krateo.io
   names:
@@ -12,10 +12,10 @@ spec:
     - krateo
     - definition
     - core
-    kind: Definition
-    listKind: DefinitionList
-    plural: definitions
-    singular: definition
+    kind: CompositionDefinition
+    listKind: CompositionDefinitionList
+    plural: compositiondefinitions
+    singular: compositiondefinition
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -35,22 +35,27 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Definition is a definition type with a spec and a status.
+        description: CompositionDefinition is a definition type with a spec and a
+          status.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
           spec:
-            description: DefinitionSpec is the specification of a Definition.
             properties:
               chart:
                 properties:
@@ -81,16 +86,17 @@ spec:
                   rule: '!has(oldSelf.repo) || has(self.repo)'
               deletionPolicy:
                 default: Delete
-                description: DeletionPolicy specifies what will happen to the underlying
-                  external when this managed resource is deleted - either "Delete"
-                  or "Orphan" the external resource.
+                description: |-
+                  DeletionPolicy specifies what will happen to the underlying external
+                  when this managed resource is deleted - either "Delete" or "Orphan" the
+                  external resource.
                 enum:
                 - Orphan
                 - Delete
                 type: string
             type: object
           status:
-            description: DefinitionStatus is the status of a Definition.
+            description: CompositionDefinitionStatus is the status of a CompositionDefinition.
             properties:
               conditions:
                 description: Conditions of the resource.
@@ -98,13 +104,15 @@ spec:
                   description: A Condition that may apply to a resource.
                   properties:
                     lastTransitionTime:
-                      description: LastTransitionTime is the last time this condition
-                        transitioned from one status to another.
+                      description: |-
+                        LastTransitionTime is the last time this condition transitioned from one
+                        status to another.
                       format: date-time
                       type: string
                     message:
-                      description: A Message containing details about this condition's
-                        last transition from one status to another, if any.
+                      description: |-
+                        A Message containing details about this condition's last transition from
+                        one status to another, if any.
                       type: string
                     reason:
                       description: A Reason for this condition's last transition from
@@ -115,8 +123,9 @@ spec:
                         False, or Unknown?
                       type: string
                     type:
-                      description: Type of this condition. At most one of each condition
-                        type may apply to a resource at any point in time.
+                      description: |-
+                        Type of this condition. At most one of each condition type may apply to
+                        a resource at any point in time.
                       type: string
                   required:
                   - lastTransitionTime
