feat: change role generation from definitions to compositiondefinitions

--- a/artifacts/rbac.yaml
+++ b/artifacts/rbac.yaml
@@ -6,8 +6,8 @@ rules:
 - apiGroups:
   - core.krateo.io
   resources:
-  - definitions
-  - definitions/status
+  - compositiondefinitions
+  - compositiondefinitions/status
   verbs:
   - '*'
 - apiGroups:
