--- a/internal/templates/assets/deployment.yaml
+++ b/internal/templates/assets/deployment.yaml
@@ -44,21 +44,21 @@ spec:
           name: metrics
           protocol: TCP
         resources: {}
-        securityContext:
-          allowPrivilegeEscalation: false
-          privileged: false
-          runAsGroup: 2000
-          runAsNonRoot: true
-          runAsUser: 2000
+        # securityContext:
+        #   allowPrivilegeEscalation: false
+        #   privileged: false
+        #   runAsGroup: 2000
+        #   runAsNonRoot: true
+        #   runAsUser: 2000
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext:
-        runAsGroup: 2000
-        runAsNonRoot: true
-        runAsUser: 2000
+      # securityContext:
+      #   runAsGroup: 2000
+      #   runAsNonRoot: true
+      #   runAsUser: 2000
       serviceAccount: {{ .name }}
       serviceAccountName: {{ .name }}
       terminationGracePeriodSeconds: 30
