--- a/crds/core.krateo.io_compositiondefinitions.yaml
+++ b/crds/core.krateo.io_compositiondefinitions.yaml
@@ -68,8 +68,8 @@ spec:
                     description: 'Credentials: credentials for private repos'
                     properties:
                       passwordRef:
-                        description: A SecretKeySelector is a reference to a secret
-                          key in an arbitrary namespace.
+                        description: 'PasswordRef: reference to secret containing
+                          password for private repo'
                         properties:
                           key:
                             description: The key to select.
@@ -86,6 +86,7 @@ spec:
                         - namespace
                         type: object
                       username:
+                        description: 'Username: username for private repo'
                         type: string
                     required:
                     - passwordRef
