feat: adds mutating webhook and conversion webhook to support multiple composition versions

--- a/crds/core.krateo.io_compositiondefinitions.yaml
+++ b/crds/core.krateo.io_compositiondefinitions.yaml
@@ -63,6 +63,7 @@ spec:
           spec:
             properties:
               chart:
+                description: rtv1.ManagedSpec `json:",inline"`
                 properties:
                   credentials:
                     description: 'Credentials: credentials for private repos'
@@ -98,6 +99,10 @@ spec:
                     description: 'Repo: helm repo name (for helm repo urls only)'
                     maxLength: 256
                     type: string
+                  served:
+                    default: true
+                    description: 'Served: whether the chart is served'
+                    type: boolean
                   url:
                     description: 'Url: oci or tgz full url'
                     type: string
@@ -118,7 +123,8 @@ spec:
             description: CompositionDefinitionStatus is the status of a CompositionDefinition.
             properties:
               apiVersion:
-                description: 'ApiVersion: the api version of the custom resource'
+                description: 'ApiVersion: the api version of the custom resource -
+                  Last applied apiVersion'
                 type: string
               conditions:
                 description: Conditions of the resource.
@@ -161,7 +167,8 @@ spec:
                   occurred during role and clusterrole creation'
                 type: string
               kind:
-                description: 'Kind: the kind of the custom resource'
+                description: 'Kind: the kind of the custom resource - Last applied
+                  kind'
                 type: string
               managed:
                 description: 'Managed: information about the managed resources'
