--- a/crds/core.krateo.io_compositiondefinitions.yaml
+++ b/crds/core.krateo.io_compositiondefinitions.yaml
@@ -181,6 +181,56 @@ spec:
                     description: 'VersionInfo: the version information of the chart'
                     items:
                       properties:
+                        chart:
+                          description: 'Chart: the chart information'
+                          properties:
+                            credentials:
+                              description: 'Credentials: credentials for private repos'
+                              properties:
+                                passwordRef:
+                                  description: 'PasswordRef: reference to secret containing
+                                    password for private repo'
+                                  properties:
+                                    key:
+                                      description: The key to select.
+                                      type: string
+                                    name:
+                                      description: Name of the referenced object.
+                                      type: string
+                                    namespace:
+                                      description: Namespace of the referenced object.
+                                      type: string
+                                  required:
+                                  - key
+                                  - name
+                                  - namespace
+                                  type: object
+                                username:
+                                  description: 'Username: username for private repo'
+                                  type: string
+                              required:
+                              - passwordRef
+                              - username
+                              type: object
+                            insecureSkipVerifyTLS:
+                              description: 'InsecureSkipVerifyTLS: skip tls verification'
+                              type: boolean
+                            repo:
+                              description: 'Repo: helm repo name (for helm repo urls
+                                only)'
+                              maxLength: 256
+                              type: string
+                            url:
+                              description: 'Url: oci or tgz full url'
+                              type: string
+                            version:
+                              description: 'Version: desired chart version, needed
+                                for oci charts and for helm repo urls'
+                              maxLength: 20
+                              type: string
+                          required:
+                          - url
+                          type: object
                         served:
                           description: 'Served: whether the version is served'
                           type: boolean
