--- a/internal/templates/assets/deployment.yaml
+++ b/internal/templates/assets/deployment.yaml
@@ -45,21 +45,15 @@ spec:
           name: metrics
           protocol: TCP
         resources: {}
-        # securityContext:
-        #   allowPrivilegeEscalation: false
-        #   privileged: false
-        #   runAsGroup: 2000
-        #   runAsNonRoot: true
-        #   runAsUser: 2000
+        securityContext:
+          runAsNonRoot: true
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      # securityContext:
-      #   runAsGroup: 2000
-      #   runAsNonRoot: true
-      #   runAsUser: 2000
+      securityContext:
+        runAsNonRoot: true
       serviceAccount: {{ .name }}
       serviceAccountName: {{ .name }}
       terminationGracePeriodSeconds: 30
