--- a/.github/workflows/release-pullrequest.yaml
+++ b/.github/workflows/release-pullrequest.yaml
@@ -1,8 +1,9 @@
 name: release-tag
 
 on:
-  push:
-    tags: [ '[0-9]+.[0-9]+.[0-9]+' ]
+  pull_request:
+    branches:
+      - main
 
 env:
   GHCR_REPO: ghcr.io/${{ github.repository }}
