--- a/.github/workflows/release-pullrequest.yaml
+++ b/.github/workflows/release-pullrequest.yaml
@@ -10,13 +10,17 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build and Push
     strategy:
-      fail-fast: false
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
+        runner: [buildjet-2vcpu-ubuntu-2204-arm, buildjet-2vcpu-ubuntu-2204]
+        include:
+          - runner: buildjet-2vcpu-ubuntu-2204-arm
+            platform: linux/arm64
+          - runner: buildjet-2vcpu-ubuntu-2204
+            platform: linux/amd64
+    runs-on: ${{ matrix.runner }}
+
     steps:
       - name: Prepare
         run: |
@@ -46,4 +50,5 @@ jobs:
           platforms: ${{ matrix.platform }}
           push: false
           labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
           outputs: type=image,"name=${{ env.GHCR_REPO }}",push-by-digest=true,name-canonical=true,push=true
