--- a/.github/workflows/release-tag.yaml
+++ b/.github/workflows/release-tag.yaml
@@ -9,13 +9,18 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build and Push
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
+        runner: [buildjet-2vcpu-ubuntu-2204-arm, buildjet-2vcpu-ubuntu-2204]
+        include:
+          - runner: buildjet-2vcpu-ubuntu-2204-arm
+            platform: linux/arm64
+          - runner: buildjet-2vcpu-ubuntu-2204
+            platform: linux/amd64
+    runs-on: ${{ matrix.runner }}
+    
     steps:
       - name: Prepare
         run: |
@@ -40,7 +45,7 @@ jobs:
 
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
           platforms: ${{ matrix.platform }}
           push: true
