--- a/internal/templates/assets/deployment.yaml
+++ b/internal/templates/assets/deployment.yaml
@@ -34,6 +34,10 @@ spec:
         env: 
         - name: HOME # home should be set to /tmp or any other writable directory to avoid permission issues with helm https://github.com/helm/helm/issues/8038
           value: /tmp
+        {{- range $key, $value := .extraEnv }}
+        - name: {{ $key }}
+          value: {{ $value }}
+        {{- end }}
         args:
           - -debug
           - -group={{ .apiGroup }}
