--- a/manifests/deploy.yaml
+++ b/manifests/deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: core-provider-dev
+  namespace: demo-system
   labels:
     app.kubernetes.io/name: core-provider-dev
     app: core-provider-dev
@@ -21,10 +22,13 @@ spec:
       serviceAccountName: core-provider-dev
       containers:
       - name: core-provider-dev-container
-        image: kind.local/core-provider:latest
-        imagePullPolicy: Never
+        image: matteogastaldello/core-provider:latest
+        imagePullPolicy: Always
         args:
           - --debug
+        env:
+          - name: CORE_PROVIDER_POLL_INTERVAL
+            value: 30s
         ports:
         - containerPort: 8080
         - containerPort: 9443
@@ -34,8 +38,14 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: cert
           readOnly: true
+        - mountPath: /tmp/assets
+          name: cdc-deployment
+          readOnly: true
       volumes:
       - name: cert
         secret:
           defaultMode: 420
           secretName: core-provider-webhook-service-certs
+      - name: cdc-deployment
+        configMap:
+          name: test-core-provider-cdc-deployment
