--- a/manifests/rbac.yaml
+++ b/manifests/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: core-provider-dev
-  namespace: default
+  namespace: demo-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -71,6 +71,12 @@ rules:
   - create
   - patch
   - update
+- apiGroups:
+  - "composition.krateo.io"
+  resources:
+  - "*"
+  verbs:
+  - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -83,4 +89,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: core-provider-dev
-  namespace: default
+  namespace: demo-system
