--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: core-provider-webhook-service
-  namespace: default
+  namespace: demo-system
 spec:
   ports:
     - port: 9443
