test: testing improvements

--- a/manifests/cdc-deploy-configmap.yaml
+++ b/manifests/cdc-deploy-configmap.yaml
@@ -35,7 +35,7 @@ data:
               {}
             containers:
               - name: {{ .resource }}-{{ .apiVersion }}-controller
-                image: "matteogastaldello/composition-dynamic-controller:latest"
+                image: "ko.local/composition-dynamic-controller:latest"
                 imagePullPolicy: IfNotPresent
                 envFrom:
                   - configMapRef:
