--- a/manifests/cdc-conf-configmap.yaml
+++ b/manifests/cdc-conf-configmap.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: demo-system
 data:
   HOME: /tmp # home should be set to /tmp or any other writable directory to avoid permission issues with helm https://github.com/helm/helm/issues/8038
-  CORE_PROVIDER_DEBUG: "true"
+  URL_PLURALS: http://bff.demo-system.svc.cluster.local:8081/api-info/names
