fix: cdc env vars are now managed by a specific configmap

--- a/manifests/cdc-deploy-configmap.yaml
+++ b/manifests/cdc-deploy-configmap.yaml
@@ -39,7 +39,7 @@ data:
                 imagePullPolicy: IfNotPresent
                 envFrom:
                   - configMapRef:
-                      name: test-core-provider-cdc-configmap
+                      name: {{ .resource }}-{{ .apiVersion }}-configmap
                 securityContext:
                   {}
                 args:
