--- a/manifests/cdc-conf-configmap.yaml
+++ b/manifests/cdc-conf-configmap.yaml
@@ -5,5 +5,12 @@ metadata:
   name: test-core-provider-cdc-configmap
   namespace: demo-system
 data:
-  HOME: /tmp # home should be set to /tmp or any other writable directory to avoid permission issues with helm https://github.com/helm/helm/issues/8038
-  URL_PLURALS: http://bff.demo-system.svc.cluster.local:8081/api-info/names
+    configmap.yaml: |
+      apiVersion: v1
+      kind: ConfigMap
+      metadata:
+        name: {{ .resource }}-{{ .apiVersion }}-configmap
+        namespace: {{ .namespace }}
+      data:
+        HOME: /tmp # home should be set to /tmp or any other writable directory to avoid permission issues with helm https://github.com/helm/helm/issues/8038
+        URL_PLURALS: http://bff.demo-system.svc.cluster.local:8081/api-info/names
