--- a/manifests/deploy.yaml
+++ b/manifests/deploy.yaml
@@ -40,8 +40,11 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: cert
           readOnly: true
-        - mountPath: /tmp/assets
+        - mountPath: /tmp/assets/cdc-deployment
           name: cdc-deployment
+          readOnly: true
+        - mountPath: /tmp/assets/cdc-configmap
+          name: cdc-configmap
           readOnly: true
       volumes:
       - name: cert
@@ -51,3 +54,6 @@ spec:
       - name: cdc-deployment
         configMap:
           name: test-core-provider-cdc-deployment
+      - name: cdc-configmap
+        configMap:
+          name: test-core-provider-cdc-configmap
