--- a/testdata/compositiondefinitions_test/compositiondefinition-fireworksapp.yaml
+++ b/testdata/compositiondefinitions_test/compositiondefinition-fireworksapp.yaml
@@ -1,10 +1,10 @@
 apiVersion: core.krateo.io/v1alpha1
 kind: CompositionDefinition
 metadata:
-  name: fireworks-app
-  namespace: demo-system
+  name: fireworks-app-2 
+  namespace: krateo-system
 spec:
   chart:
     repo: fireworks-app
     url: https://charts.krateo.io
-    version: 1.1.10
+    version: 1.1.13
