--- a/manifests/cdc-deploy-configmap.yaml
+++ b/manifests/cdc-deploy-configmap.yaml
@@ -35,7 +35,7 @@ data:
               {}
             containers:
               - name: {{ .resource }}-{{ .apiVersion }}-controller
-                image: "ghcr.io/krateoplatformops/composition-dynamic-controller:0.16.3"
+                image: "ghcr.io/krateoplatformops/composition-dynamic-controller:latest"
                 #image: "kind.local/composition-dynamic-controller:latest" # uncomment this line to use local image
                 imagePullPolicy: IfNotPresent
                 envFrom:
