--- a/manifests/rbac.yaml
+++ b/manifests/rbac.yaml
@@ -83,6 +83,41 @@ rules:
   - configmaps
   verbs:
   - "*"
+# allow creating, deleting and retrieving any CertificateSigningRequest
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests
+  verbs:
+  - get
+  - create
+  - list
+  - delete
+  - deletecollection
+  - watch
+# allow approving a CertificateSigningRequest:
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests/approval
+  verbs:
+  - update
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - signers
+  resourceNames:
+  - kubernetes.io/kubelet-serving
+  verbs:
+  - approve
+# allow signing a CertificateSigningRequest:
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests/status
+  verbs:
+  - update
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
