--- a/.ko.yaml
+++ b/.ko.yaml
@@ -11,4 +11,4 @@ builds:
 defaultPlatforms:
 - linux/arm64
 #- linux/amd64
-defaultBaseImage: golang:1.23.0-alpine3.20
+defaultBaseImage: golang:1.24.3-alpine
