refactor: refactored reconciliation and add mechanism to detect when the generated status changes

--- a/internal/tools/deploy/testdata/deploy.yaml
+++ b/internal/tools/deploy/testdata/deploy.yaml
@@ -21,7 +21,7 @@ spec:
       labels:
         app.kubernetes.io/name: {{ .name }}
     spec:
-      serviceAccountName: {{ .name }}
+      serviceAccountName: {{ .resource }}-{{ .apiVersion }}
       securityContext:
         {}
       containers:
